[project]
name = "pi06"
version = "0.1.0"
description = "RECAP: RL with Experience & Corrections via Advantage-conditioned Policies - Unofficial PyTorch implementation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Unofficial Implementation" }
]
keywords = ["robotics", "reinforcement-learning", "vision-language-action", "vla"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # PyTorch ecosystem - matching openpi versions
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "torchaudio>=2.7.1",
    
    # HuggingFace transformers and tokenizers - matching openpi versions
    "transformers>=4.53.2",
    "tokenizers>=0.19.0",
    
    # Dataset handling - Lerobot v2.1 format
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "huggingface-hub>=0.20.0",
    
    # Video loading
    "decord>=0.6.0",
    
    # Logging
    "wandb>=0.16.0",
    
    # Utilities
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    
    # Performance and acceleration
    "accelerate>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
train = [
    # Training-specific dependencies can be added here
    # Example: "flash-attn>=2.6.3",  # Uncomment if needed
    # Video loading alternatives (if decord/torchvision fail)
    # "opencv-python>=4.8.0",  # Uncomment if needed
    # "av>=10.0.0",  # PyAV for torchvision video support (uncomment if needed)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Hatchling will auto-detect packages in src/ directory
packages = ["pi06"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

